# sim_arm_pickup_demo

./: README.md
gazebo-pkgs/gazebo_grasp_plugin/src/: GazeboGraspFix.cpp
sim_arm_location_msg/: CMakeLists.txt  package.xml
sim_arm_location_msg/srv/: ChooseCube.srv
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/: CMakeLists.txt  package.xml
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/launch/: panda_simulation.launch.py
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/models/number1_/: model.config  model.sdf
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/models/number2_/: model.config  model.sdf
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/models/number3_/: model.config  model.sdf
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/urdf/: camera.xacro  initial_positions.yaml  panda.urdf.xacro  panda_macro.urdf.xacro  panda_ros2control.xacro  panda_transmission.xacro
sim_arm_panda_gazebo/PandaRobot/panda_ros2_gazebo/worlds/: panda.world
sim_arm_panda_gazebo/PandaRobot/panda_ros2_moveit2/: package.xml
sim_arm_panda_gazebo/PandaRobot/panda_ros2_moveit2/config/: joint_limits.yaml  panda.srdf  panda.urdf.xacro  panda_controllers.yaml  ros2_controllers.yaml
sim_arm_panda_gazebo/PandaRobot/panda_ros2_moveit2/launch/: panda.launch.py
sim_arm_pickup_control/: CMakeLists.txt  package.xml
sim_arm_pickup_control/launch/: arm_pickup_service.launch.py  arm_pickup_test.launch.py
sim_arm_pickup_control/src/: arm_pickup_service.cpp  arm_pickup_test.cpp
