<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_ros2_moveit2</name>
  <version>0.0.1</version>
  <description>panda moveit2</description>

  <maintainer email="847005649@qq.com">nuo.wu</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2_data</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
